--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "ring-algorithm"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Toru3 <ryuutet@gmail.com>"]
 edition = "2018"
 description = "algorithms on ring(Abstruct Algebra)"
 license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/compress_history/"
 repository = "https://gitlab.com/Toru3/ring-algorithm"
 keywords = ["algorithm", "ring", "algebra", "polynomial"]
 categories = ["algorithms", "mathematics"]
