--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "ring-algorithm"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Toru3 <ryuutet@gmail.com>"]
 edition = "2018"
 description = "algorithms on ring(Abstruct Algebra)"
 license = "MIT OR Apache-2.0"
-documentation = "https://docs.rs/compress_history/"
-homepage = "https://crates.io/crates/compress_history"
+documentation = "https://docs.rs/ring-algorithm/"
+homepage = "https://crates.io/crates/ring-algorithm"
 repository = "https://gitlab.com/Toru3/ring-algorithm"
 readme = "README.md"
 keywords = ["algorithm", "ring", "algebra", "polynomial"]
