--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ring-algorithm"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["Toru3 <ryuutet@gmail.com>"]
 edition = "2018"
 description = "algorithms on ring(Abstruct Algebra)"
@@ -17,7 +17,6 @@ categories = ["algorithms", "mathematics"]
 [dependencies]
 num-traits = "0.2.11"
 take_mut = "0.2.2"
-katex-doc = "0.1.0"
 [dev-dependencies]
 num = "0.2.1"
 [features]
@@ -26,5 +25,5 @@ debug = []
 [package.metadata.docs.rs]
 rustdoc-args = [
     "--html-in-header",
-    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
+    "katex.html",
 ]
