--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ take_mut = "0.2.2"
 num = "0.2.1"
 [features]
 default = []
-debug = []
+__internal_inject_debug = [] # DO NOT USE
 [package.metadata.docs.rs]
 rustdoc-args = [
     "--html-in-header",
